fixed styling on scrollbar & fixed linux icon

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,10 @@
   border: 3px solid #222;
 }
 
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #010101;
+}
+
 *::-webkit-scrollbar-corner {
   background: #222;
 }
